fix: fixed the release info

--- a/deskthing/manifest.json
+++ b/deskthing/manifest.json
@@ -1,5 +1,5 @@
 {
-    "id": "bla-audio",
+    "id": "better-local-audio",
     "requires": [],
     "label": "Better Local Audio",
     "version": "1.0.1",
