--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist/
-          dest: blat-${{ github.event.release.tag_name }}.zip
+          dest: better-local-audio-${{ github.event.release.tag_name }}.zip
       - name: Upload artifacts to release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            blat-${{ github.event.release.tag_name }}.zip
+            better-local-audio-${{ github.event.release.tag_name }}.zip
             dist/latest.json
