--- a/deskthing/manifest.json
+++ b/deskthing/manifest.json
@@ -2,7 +2,7 @@
     "id": "better-local-audio",
     "requires": [],
     "label": "Better Local Audio",
-    "version": "1.0.1",
+    "version": "v1.0.2",
     "description": "A cross-platform audio app that lets you control any locally playing music",
     "author": "DannyTheHeretic",
     "platforms": [
