--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "better-local-audio",
   "private": true,
-  "version": "0.11.1",
+  "version": "v1.0.2",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
